# hhnk-fewspy

./: .gitignore  MANIFEST.in  README.md  deploy.bat  pyproject.toml  setup.py
deprecated/: pixml.py
hhnk_fewspy/: __init__.py  api_functions.py  general_functions.py  hhnkfewspy.py  utils.py  xml_classes.py  xml_functions.py
hhnk_fewspy/api_response/: __init__.py  intervalstatistics.py
hhnk_fewspy/old/: fix_jupyter.py  hhnkfewspy.py  pixml.py
hhnk_fewspy/old/hkvfewspy/: pi_helper.py
tests_fewspy/: config.py  test_api_functions.py  test_xml.py  test_xml_classes.py
tests_fewspy/data/: bin_test_series.xml  normal_test_series.xml
